--- a/WinCorePatPranali/src/app/screens/accounts/loan-accounts/loan-types/lien-fd-loan/lien-fd-loan.component.css
+++ b/WinCorePatPranali/src/app/screens/accounts/loan-accounts/loan-types/lien-fd-loan/lien-fd-loan.component.css
@@ -4,3 +4,6 @@
     border: 2px solid #f5f5f5;
     margin-bottom: 2px;
 }
+.table > thead > tr > th {
+    background-color: #d0d0d0 !important;
+}
