--- a/WinCorePatPranali/src/app/screens/accounts/loan-accounts/loan-details/loan-details.component.html
+++ b/WinCorePatPranali/src/app/screens/accounts/loan-accounts/loan-details/loan-details.component.html
@@ -195,11 +195,11 @@
                                     <span>Mortgage</span>
                                 </a>
                             </li>
-                            <li class="nav-item">
+                            <!-- <li class="nav-item">
                                 <a role="tab" class="nav-link" id="tab-1" data-toggle="tab" href="#subtab-content-inst-2">
                                     <span>Gold Loan</span>
                                 </a>
-                            </li>
+                            </li> -->
                            
                             <!-- <li class="nav-item">
                                 <a role="tab" class="nav-link" id="tab-3" data-toggle="tab" href="#subtab-content-3">
@@ -215,9 +215,9 @@
                             <div class="tab-pane tabs-animation fade" id="subtab-content-inst-1" role="tabpanel">
                                <app-loan-security (loanSecurityDetails)="getLoanSecurityDetails($event)"></app-loan-security>
                             </div>
-                            <div class="tab-pane tabs-animation fade" id="subtab-content-inst-2" role="tabpanel">
+                            <!-- <div class="tab-pane tabs-animation fade" id="subtab-content-inst-2" role="tabpanel">
                                 
-                            </div>
+                            </div> -->
                         </div>
                     </div>
 
